--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,8 @@
+.curriculum_title {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
 #hidden_delete_progression_form {
   display: none;
 }
@@ -63,6 +68,20 @@ span.radio.inline {
   }
   li:hover {
     background-color: whitesmoke;
+    a {
+      color: #ec6952;
+      -webkit-transition: all 0.4s ease-in-out;
+      -moz-transition: all 0.4s ease-in-out;
+      -ms-transition: all 0.4s ease-in-out;
+      -o-transition: all 0.4s ease-in-out;
+    }
+    a:hover {
+      text-decoration: underline;
+      color: #e74124;
+    }
+    a:focus {
+      text-decoration: none;
+    }
   }
 }
 
