--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,22 +1,29 @@
 <%= link_to '< Back to Courses', courses_path %>
 
-<h1><%= @course_title %></h1>
+<h1 class="curriculum_title"><%= @course_title %></h1>
 
-<div class = "row">
-
-  <% @lessons.each do |chapter| %>
+  <% @lessons.each_with_index do |chapter, i| %>
+    <% if (i + 1) % 3 == 0 %>
+      <div class = "row">
+    <% end %>
     
-    <div class = "col-xs-12 col-md-4 course_box">
+    <div class = "col-xs-12 col-md-4">
+      <div class="course_box">
 
-      <h3 class = "underlined-header"><%= chapter[0] %></h3>
-      <ul class = "unindented_ul">
+        <h3 class = "underlined-header"><%= chapter[0] %></h3>
+        <ul class = "unindented_ul">
 
-      <% chapter[1].each do |lesson| %>
-        <li><%= link_to "Lesson #{lesson[0]} - #{lesson[1]} #{lesson_completed(lesson[0])}".html_safe, "#{@lesson_link}/#{(lesson[0])}" %></li>
-      <% end %>
-    </div>
+        <div class="course_description">
+          <% chapter[1].each do |lesson| %>
+            <%= link_to "<li> Lesson #{lesson[0]} - #{lesson[1]} #{lesson_completed(lesson[0])}</li>".html_safe, "#{@lesson_link}/#{(lesson[0])}" %>
+          <% end %>
+        </div><!-- course_description -->
+      </div><!-- course_box -->
+    </div><!-- col-xs-12 col-md-4 -->
+
+    <% if (i + 1) % 3 == 0 && i != 0 %>
+      </div><!-- row -->
+    <% end %>
+    
     
   <% end %>
-
-
-</div>
