--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -20,6 +20,10 @@
                     </li>
 
                     <li class="nav-item page-scroll">
+                      <%= link_to 'DASHBOARD', dashboard_path %>
+                    </li>
+
+                    <li class="nav-item page-scroll">
                       <%= link_to 'ALL COURSES', courses_path %>
                     </li>
 
