--- a/app/views/instapost_lessons/lessons/lesson_1.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_1.html.erb
@@ -98,7 +98,7 @@ http://localhost:3000/
   </p>
 
 <pre><code class="bash">
-cd ~/desktop/instapost4
+cd ~/desktop/instapost
 </code></pre>
 
   <p>
