--- a/app/views/instapost_lessons/lessons/lesson_8.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_8.html.erb
@@ -1,13 +1,13 @@
 <h1><%= title_for(InstapostLesson, 4, 2) %></h1>
 
 <p>
-  We've got carrierwave set up, but we need to do one more thing for it to work live on heroku.
+  This is a completely optional lesson. Instead of saving the uploaded photos locally, we can integrate it with the AWS S3 service and automatically upload the photos to the cloud.
+</p>
+
+<p class="alert">
+  You need a credit card for this step. If you don't have a credit card, feel free to skip this step and move on. 
 </p>
 
 <p>
-  We need to configure Carrierwave so that it uses Amazon's S3 service and stores the files there instead of in Heroku.
-</p>
-
-<p>
-  <%= link_to 'this blog post', 'http://blog.thefirehoseproject.com/posts/switching-carrierwave-to-use-s3-with-heroku-and-localhost/' %> walks you through each of the steps in depth. <strong>Follow each of the steps and make sure you don't skip anything!</strong>
+  <%= link_to 'This blog post', 'http://blog.thefirehoseproject.com/posts/switching-carrierwave-to-use-s3-with-heroku-and-localhost/' %> walks you through each of the steps in depth. <strong>Follow each of the steps and make sure you don't skip anything!</strong>
 </p>
