--- a/app/views/instapost_lessons/lessons/lesson_8.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_8.html.erb
@@ -4,7 +4,7 @@
   This is a completely optional lesson. Instead of saving the uploaded photos locally, we can integrate it with the AWS S3 service and automatically upload the photos to the cloud.
 </p>
 
-<p class="alert">
+<p class="alert alert-danger">
   You need a credit card for this step. If you don't have a credit card, feel free to skip this step and move on. 
 </p>
 
