--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -59,35 +59,36 @@
 	<%= render partial: 'course', locals: {course: 'Intro', course_name: "An introduction to web development and why it's so cool.", available: true, course_link: intro_path, course_access: 'intro', controller_name: 'IntroLesson'} %>
 
 	<%= render partial: 'course', locals: {course: 'HTML/CSS', course_name: "HTML and CSS are the tools developers use to structure web pages. Learning the basics of HTML and CSS to start building your own web pages.", available: true, course_link: html_css_path, course_access: 'html_css', controller_name: 'HtmlCssLesson'} %>
-	<!-- , lessons: HTMLCSS::LESSONS -->
+	
 	<%= render partial: 'course', locals: {course: 'Ruby Fundamentals', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of programming while learning Ruby.', available: true, course_link: ruby_path, course_access: 'ruby_fundamentals', controller_name: 'RubyLesson'} %>
 
 </div>
 
 <div class = "row">
 
+	<%= render partial: 'course', locals: {course: 'Master the Command Line', course_name: '', available: true, course_link: command_line_path, course_access: 'command_line', controller_name: 'CommandLineLesson'} %>
+
 	<%= render partial: 'course', locals: {course: 'Ideator - An idea sharing app', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: true, course_link: ideator_path, course_access: 'ideator', controller_name: 'IdeatorLesson'} %>
 
 	<%= render partial: 'course', locals: {course: 'MVC and REST', course_name: '', available: false, course_link: mvc_path, course_access: 'mvc', controller_name: 'MvcLesson'} %>
 
 
-	<%= render partial: 'course', locals: {course: 'Ruby Core Training', course_name: 'Strengthen your Ruby skills by going through various coding challenges. Sharpen your thinking skills and become a more proficient web developer.', available: true, course_link: ruby_core_path, course_access: 'ruby_core', controller_name: 'RubyCoreLesson'} %>
-
-
 </div>
 
 <div class = "row">
+
+	<%= render partial: 'course', locals: {course: 'Ruby Core Training', course_name: 'Strengthen your Ruby skills by going through various coding challenges. Sharpen your thinking skills and become a more proficient web developer.', available: true, course_link: ruby_core_path, course_access: 'ruby_core', controller_name: 'RubyCoreLesson'} %>
 
 	<%= render partial: 'course', locals: {course: 'Instapost - Share your photos', course_name: 'Create a clone of the popular Instagram application. You are going to be creating a more complex app than before! Get excited!', available: true, course_link: instapost_path, course_access: 'instapost', controller_name: 'InstapostLesson' } %>
 
 	<%= render partial: 'course', locals: {course: 'RSpec and Testing', course_name: 'If you want to become a valuable software developer, you need to learn how to test your applications.', available: false, course_link: '', course_access: 'rspec_blog', controller_name: 'RspecBlogLesson' } %>
 
-	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'Manipulate the DOM by using JavaScript. Learn the basics of JavaScript and jQuery.', available: true, course_link: javascript_path, course_access: 'javascript', controller_name: 'JavascriptLesson'} %>
-
 
 </div>
 
 <div class = "row">
+	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'Manipulate the DOM by using JavaScript. Learn the basics of JavaScript and jQuery.', available: true, course_link: javascript_path, course_access: 'javascript', controller_name: 'JavascriptLesson'} %>
+	
 	<%= render partial: 'course', locals: {course: 'Git/GitHub', course_name: 'Git and GitHub is used by the majority of web developers. Learn what it is and how you can utilize it to collaborate and implement version control.', available: true, course_link: github_path, course_access: 'github', controller_name: 'GithubLesson'} %>
 
 	<%= render partial: 'course', locals: {course: 'Algorithms', course_name: 'Learning how to solve algorithms challenges will help you think logically and solve difficult problems in programming.', available: false, controller_name: 'AlgorithmLesson', course_link: 'algorithm_path', course_access: 'algorithm' } %>
