--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,9 @@
+.well {
+  h3 {
+    border-bottom: 2px solid #ec6952;
+  }
+}
+
 .curriculum_title {
   margin-bottom: 50px;
   text-align: center;
