add standard git workflows

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,17 @@
+.modal-body {
+  p {
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+  }
+}
+
+.standard_git_workflow {
+  border-left: 5px solid #ec6952;
+  padding-left: 10px;
+  background: whitesmoke;
+  padding: 10px;
+}
+
 .well {
   h3 {
     border-bottom: 2px solid #ec6952;
