--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -28,6 +28,8 @@
 
       <%= render partial: '/comments/for_lesson', locals: { name: "#{@course_name}", lesson: params[:id]} %>
 
+      <%= render 'git_workflow_modal' %>
+
     </section>
 
   </div>
