--- a/app/views/ideator_lessons/lessons/lesson_10.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_10.html.erb
@@ -132,6 +132,4 @@ end
   Don't worry if this all doesn't make sense yet. The main focus here is to keep on building to create that momentum for you to learn faster. :)
 </p>
 
-<p>
-  Let's go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
