--- a/app/views/ideator_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_11.html.erb
@@ -58,6 +58,4 @@
   Let's go back into the browser and refresh the page. Awesome! You should now see each idea wrapped around in a panel.
 </p>
 
-<p>
-  Let's go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
