--- a/app/views/ideator_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_12.html.erb
@@ -227,7 +227,5 @@ rails generate simple_form:install --bootstrap
    Now let's test this out. Enter an idea and an author and press 'Submit'. Voila! You should see your idea on your page, just like that!
 </p>
 
-<p>
-  Let's go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
 
