--- a/app/views/ideator_lessons/lessons/lesson_13.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_13.html.erb
@@ -114,11 +114,7 @@
   Now let's refresh the page and see what happens. You should see a perfect modal that is fully functional. This app is starting to look really cool!
 </p>
 
-<p>
-  Let's go through the standard git workflow.
-</p>
-
-
+<%= standard_git_workflow %>
 
 
 
