--- a/app/views/ideator_lessons/lessons/lesson_14.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_14.html.erb
@@ -97,9 +97,7 @@ end
   Why do we need to check if the idea was updated successfully? We'll talk about <strong>validations</strong> and get into why in the next lesson.
 </p>
 
-<p>
-  Let's go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
 
 
 
