--- a/app/views/ideator_lessons/lessons/lesson_15.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_15.html.erb
@@ -49,6 +49,4 @@ end
  Pretty simple right? :) Congrats on writing your first validation!
 </p>
 
-<p>
-  Let's go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
