--- a/app/views/ideator_lessons/lessons/lesson_18.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_18.html.erb
@@ -79,8 +79,6 @@
   Awesome! Let's now move on to building the "Random" page.
 </p>
 
-<p>
-  Go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
 
 
