--- a/app/views/ideator_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_20.html.erb
@@ -85,6 +85,4 @@ end
   Refresh the page and you should see that the page links are now centered. Cool!
 </p>
 
-<p>
-  Let's now go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
