--- a/app/views/ideator_lessons/lessons/lesson_21.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_21.html.erb
@@ -24,6 +24,4 @@
 </p>
 
 
-<p>
-  After you're done with that, make sure to go through the standard git workflow.
-</p>
+<%= standard_git_workflow %>
