--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -99,7 +99,4 @@ rake db:migrate
   Awesome! You've set up your first model! :) The fun will soon begin!
 </p>
 
-<p>
-  Let's go through the standard git workflow.
-</p>
-
+<%= standard_git_workflow %>
