--- a/app/views/instapost_lessons/lessons/lesson_5.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_5.html.erb
@@ -65,8 +65,10 @@ rails generate devise:views
 </p>
 
 <p>
-  Awesome! Just like that, you've successfully installed devise. As always, make sure to go through the standard git workflow.
+  Awesome! Just like that, you've successfully installed devise.
 </p>
+
+<%= standard_git_workflow %>
 
 
 
