--- a/app/views/ideator_lessons/lessons/lesson_17.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_17.html.erb
@@ -36,8 +36,5 @@ get 'random' =&gt; 'ideas#random'
   Now that we've set up these routes, let's go into our controller and set up the view for these two routes in the next lesson.
 </p>
 
-<p>
-  Make sure you go through the standard git workflow.
-</p>
-
+<%= standard_git_workflow %>
 
