--- a/app/views/application/_git_workflow_modal.html.erb
+++ b/app/views/application/_git_workflow_modal.html.erb
@@ -16,7 +16,7 @@ git add .
 <p>Then add a commit message describing what you just updated:</p>
 
 <pre><code class="bash">
-git commit -am “Add ideas controller and set ideas#index as root”
+git commit -am “Commit message here.”
 </code></pre>
 
 <p>Finally, push up to GitHub.</p>
