--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -81,7 +81,7 @@
 
 	<%= render partial: 'course', locals: {course: 'Instapost - Share your photos', course_name: 'Create a clone of the popular Instagram application. You are going to be creating a more complex app than before! Get excited!', available: true, course_link: instapost_path, course_access: 'instapost', controller_name: 'InstapostLesson' } %>
 
-	<%= render partial: 'course', locals: {course: 'RSpec and Testing', course_name: 'If you want to become a valuable software developer, you need to learn how to test your applications.', available: false, course_link: '', course_access: 'rspec_blog', controller_name: 'RspecBlogLesson' } %>
+	<%= render partial: 'course', locals: {course: 'RSpec and Testing', course_name: 'If you want to become a valuable software developer, you need to learn how to test your applications.', available: true, course_link: rspec_blog_path, course_access: 'rspec_blog', controller_name: 'RspecBlogLesson' } %>
 
 
 </div>
