--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -166,6 +166,10 @@ span.radio.inline {
     border-left: 6px solid #ec6952;
     padding-left: 10px;
   }
+  h2 {
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 10px;
+  }
 }
 
 .item .content p {
