add all self directed lessons

--- a/app/views/instapost_lessons/lessons/lesson_1.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_1.html.erb
@@ -40,7 +40,11 @@ rails new instapost
 
 
 <p>
-  Great, now that we’ve created our new rails app, let’s start up our server. Let’s go into Tokaido and open up another terminal window. Again, we want to have two terminal windows open since we want one for the server and one for typing in rails commands. In one of the terminal windows, let’s navigate to our project folder. We can do this by running the following command:
+  Great, now that we’ve created our new rails app, let’s start up our server. Let’s go into Tokaido and open up another terminal window.
+</p>
+
+<p>
+  We want to have <strong>two</strong> terminal windows open since we want one for the server and one for typing in rails commands. In one of the terminal windows, let’s navigate to our project folder. We can do this by running the following command:
 </p>
 
 <pre><code class="bash">
