--- a/app/views/instapost_lessons/lessons/lesson_2.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_2.html.erb
@@ -4,6 +4,14 @@
   Now that we’ve set up our project, let’s also set up GitHub so that we can save our project online and go back to previous versions when we want to.
 </p>
 
+<p>
+  First, let's navigate ourselves to the project folder:
+</p>
+
+<pre><code class="bash">
+cd ~/desktop/instapost
+</code></pre>
+
 <p>In your console type in the following:</p>
 
 <pre><code class="bash">
