add devise box to forum comments

--- a/app/views/submission_comments/show.html.erb
+++ b/app/views/submission_comments/show.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-offset-1 col-md-10 col-xs-12">
-	<div class="devise_box submission_container">
+	<div class="devise_box forum_container">
 		<%= back_to_lesson %>
 
 		<h3><%= @submission_comment.title %></h3>
