--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,16 +1,16 @@
 <div class="col-md-offset-1 col-md-10 col-xs-12">
-
+	<div class="devise_box forum_container">
 		<%= back_to_lesson %>
 		
 		<h3><%= @comment.title %></h3>
 		<%= sanitize raw(@comment.description) %>
-		<p class = "pull-right" >by <%= comment_owner(@comment) %></p>
+		<p class = "pull-right" ><small>by <%= comment_owner(@comment) %></small></p>
 		<br class = "clear">
 		<hr>
 
 		<% @comment.replies.each do |reply| %>
 			<%= sanitize raw(reply.content) %>
-			<p class = "pull-right" >by <%= reply_owner(reply) %></p>
+			<p class = "pull-right" ><small>by <%= reply_owner(reply) %></small></p>
 			<br class = "clear">
 			<hr>
 		<% end %>
@@ -26,5 +26,5 @@
 			<br>
 			<%= f.submit 'Submit', class: 'btn btn-primary' %>
 		<% end %>
-
+	</div>
 </div>
