--- a/app/views/html_css_lessons/lessons/lesson_2.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_2.html.erb
@@ -16,9 +16,9 @@
 	You'll be building <strong>a personal website</strong>, a <strong>responsive blog theme</strong>, a <strong>small business website</strong>, and a <strong>CSS robot</strong>. Pretty awesome stuff! For an intro course, we think it's one of the best courses out there.
 </p>
 
-<h3>Directions</h3>
+<h2>Directions</h2>
 <ul>
-  <li>Don't worry about finishing Project 5</li>
+  <li><strong>Don't worry about finishing Project 5</strong></li>
   <li>Finish Project 1 ~ 4</li>
   <li>Upload screenshot of your completed Dash Assembly screen using <a href = "http://imgur.com/" target = "_blank">imgur</a></li>
   <li>Post the link in below in the submissions section</span> so that we can see that you've completed the course</li>
@@ -48,4 +48,4 @@
 
 <br class = "clear">
 
-<% @submission = true %>
+<% @submissions = true %>
