--- a/app/views/html_css_lessons/lessons/lesson_4.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_4.html.erb
@@ -18,7 +18,11 @@
 </p>
 
 <p>
-  Once you've completed your resume website, let's go to GitHub and go to a page called "Gist". For me, if I look on the top navigation bar, I see a link that says "Gist". So let's find that link and click on it. If you can't find it, try hitting Command + F (Mac) or Control + F (Windows) that spawns up a search box, and enter "Gist". It will find it and jump to the word on the website for you.
+  Once you've completed your resume website, let's go to GitHub and go to a page called "Gist". 
+</p>
+
+<p>
+  For me, if I look on the top navigation bar, I see a link that says "Gist". So let's find that link and click on it. If you can't find it, try hitting Command + F (Mac) or Control + F (Windows) that spawns up a search box, and enter "Gist". It will find it and jump to the word on the website for you.
 </p>
 
 <p>
