--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -24,7 +24,7 @@
             <div class="panel-body">
               <ul class="unindented_ul">
                 <% @submissions.each do |submission| %>
-                  <li><%= link_to submission.title, forum_comment_path(submission.forum_id, submission.id) %> by <%= User.find(submission.user_id).name %></li>
+                  <li><%= link_to submission.title, submission_submission_comment_path(submission.submission_id, submission.id) %> by <%= User.find(submission.user_id).name %></li>
                 <% end %>
               </ul>
             </div>
