--- a/app/views/rspec_blog_lessons/lessons/lesson_6.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_6.html.erb
@@ -9,3 +9,5 @@
   <li>Install the <code>simple_form</code> gem</li>
   <li>Integrate simple form with bootstrap (<%= link_to 'refer to this link', 'https://github.com/plataformatec/simple_form#bootstrap' %>)</li>
 </ul>
+
+<%= standard_git_workflow %>
