--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -177,6 +177,11 @@ span.radio.inline {
     border-bottom: 2px solid #ddd;
     padding-bottom: 10px;
   }
+  h3 {
+    border-left: 5px solid #ec6952;
+    border-bottom: 2px solid #ec6952;
+    padding-left: 10px;
+  }
 }
 
 .item .content p {
