--- a/app/views/rspec_blog_lessons/lessons/lesson_1.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_1.html.erb
@@ -1,13 +1,13 @@
 <h1><%= title_for(RspecBlogLesson, 1, 1) %></h1>
 
 <p>
-  If you want to become a valuable software developer, <strong>learning how to write tests is very important,</strong> and hopefully through the next few lessons, you'll learn and understand why you need to start writing tests.
+  If you want to become a valuable software developer, <strong>learning how to write unit tests is very important,</strong> and hopefully through the next few lessons, you'll learn and understand why you need to start writing tests.
 </p>
 
-<h2>What are Tests?</h2>
+<h2>What are Unit Tests?</h2>
 
 <p>
-  Tests in the web development world refers to <strong>automated checks</strong> that ensure that everything in the code is working correctly.
+  Unit tests in the web development world refers to <strong>automated checks</strong> that ensure that everything in the code is working correctly.
 </p>
 
 <%= create_flashcard %>
@@ -34,7 +34,7 @@
 </p>
 
 <p>
-  <strong>This is where tests come in.</strong> Tests enable us to automate the checking process. As software developers, part of our job is to write these tests so that we know when ourselves or someone on the team has broken the code.
+  <strong>This is where unit tests come in.</strong> Unit tests enable us to automate the checking process. As software developers, part of our job is to write these tests so that we know when ourselves or someone on the team has broken the code.
 </p>
 
 <%= create_flashcard %>
