change flashcard design

--- a/app/views/rspec_blog_lessons/lessons/lesson_12.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_12.html.erb
@@ -21,6 +21,8 @@
   <li>Refactor the code</li>
 </ul>
 
+<%= create_flashcard %>
+
 <p>
   <strong>Here are some benefits of practicing TDD:</strong>
 </p>
@@ -31,8 +33,16 @@
   <li>By writing tests first, you have an outline of what you want the code to do before you write the code</li>
 </ul>
 
+<%= create_flashcard %>
+
+<h3>Unit Testing vs Test Driven Development</h3>
+
 <p>
-  This is different from simply writing <strong>unit tests</strong>, which refer to automated tests that don't necessary need to be written before you write the actual code. The TDD philosophy states that developers should write these unit tests first, before writing any code.
+  In <%= link_to 'Lesson 1', '/rspec_blog_lessons/1' %>, we talked about <strong>unit tests</strong>. At this point, you're probably wondering what the difference is between unit testing and test driven development. It's actually quite simple.
+</p>
+
+<p>
+  <strong>Unit tests</strong> refer to the individual tests (which are often automated), while Test Driven Development refers to the practice of writing these unit tests before you write the actual code.
 </p>
 
 <p>
@@ -44,6 +54,7 @@
   <li>As the application grows bigger, it's faster to have automated tests compared to clicking around the app to see if everything works</li>
 </ul>
 
+<%= create_flashcard %>
 
 
 
