--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,26 @@
+.btn-flashcard {
+  background: none;
+  border: 1px solid #5cb85c;
+  color: #5cb85c;
+  font-weight: 400 !important;
+  margin-top: 15px;
+  .fa {
+    color: #5cb85c !important;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+  }
+}
+
+.btn-flashcard:hover {
+  background: #5cb85c;
+  color: #fff;
+  .fa {
+    color: #fff !important;
+  }
+}
+
 .forum_container {
   h3 {
     border-left: 3px solid #ec6952;
@@ -181,6 +204,7 @@ span.radio.inline {
     border-left: 5px solid #ec6952;
     border-bottom: 2px solid #ec6952;
     padding-left: 10px;
+    margin-top: 50px;
   }
 }
 
