--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 
   </div>
 
-  <%= render '/layouts/footer' %>
+  <%= render '/layouts/lesson_footer' %>
   
   <%= render '/layouts/audio' %>
 </body>
