--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -186,7 +186,10 @@ span.radio.inline {
 
 #slider {
   padding: 20px;
+  padding-bottom: 50px;
   box-shadow: 5px 0 15px -6px #585858 inset;
+  top: 30px !important;
+  overflow-y: scroll;
 }
 
 
