--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,24 +1,61 @@
-<div class="col-md-offset-1 col-md-10 col-xs-12">
-	<div class="devise_box forum_container">
-		<%= back_to_lesson %>
-		
-		<h3><%= @comment.title %></h3>
-		<%= sanitize raw(@comment.description) %>
-		<p class = "pull-right" ><small>by <%= comment_owner(@comment) %></small></p>
-		<br class = "clear">
 
-		<% if current_user.admin || @comment.user_id == current_user %>
-			<div id="comment_solved_form_container">
-				<%= render partial: 'comment_solved_form' %>
+	<div class="devise_box forum_container">
+
+		<div class="back_to_lesson">
+			<%= back_to_lesson %>
+		</div>
+
+		<div class="row">
+			<div class="col-xs-2">
+				<%= image_tag @user.avatar, class: 'prof_pic_forum' %>
+				<div class="prof_name">
+					<%= comment_owner(@comment) %>
+				</div>
+				<div class="prof_badge">
+					<% if @user.mentor %>
+						<label class="label label-default">TECHRISE Mentor</label>
+					<% end %>
+				</div>
 			</div>
-		<% end %>
+
+			<div class="col-xs-10">
+				<h3><%= @comment.title %></h3>
+				<small><%= display_date(@comment.created_at) %></small>
+				<%= sanitize raw(@comment.description) %>
+				<p class = "pull-right" ></p>
+				<br class = "clear">
+
+				<% if current_user.admin || @comment.user_id == current_user %>
+					<div id="comment_solved_form_container">
+						<%= render partial: 'comment_solved_form' %>
+					</div>
+				<% end %>
+			</div>
+		</div>
 
 		<hr>
 
+					
 		<% @comment.replies.each do |reply| %>
-			<%= sanitize raw(reply.content) %>
-			<p class = "pull-right" ><small>by <%= reply_owner(reply) %></small></p>
-			<br class = "clear">
+			<% user = User.find(reply.user_id) %>
+			<div class="row">
+				<div class="col-xs-2">
+					<%= image_tag user.avatar, class: 'prof_pic_forum' %>
+					<div class="prof_name">
+						<%= reply_owner(reply) %>
+					</div>
+					<div class="prof_badge">
+						<% if user.mentor %>
+							<label class="label label-default">TECHRISE Mentor</label>
+						<% end %>
+					</div>
+				</div>
+
+				<div class="col-xs-10">
+					<small><%= display_date(reply.created_at) %></small>
+					<%= sanitize raw(reply.content) %>
+				</div>
+			</div>
 			<hr>
 		<% end %>
 
@@ -33,5 +70,5 @@
 			<br>
 			<%= f.submit 'Submit', class: 'btn btn-primary' %>
 		<% end %>
+
 	</div>
-</div>
