--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-6">
           <div class="panel">
-            <div class="panel-heading">
+            <div class="panel-heading text-center">
               <h3><%= @questions.count %> Unanswered Questions</h3>
             </div>
             <div class="panel-body">
@@ -18,7 +18,7 @@
 
         <div class="col-xs-12 col-md-6">
           <div class="panel">
-            <div class="panel-heading">
+            <div class="panel-heading text-center">
               <h3><%= pluralize @submissions.count, "Submission" %> to Review</h3>
             </div>
             <div class="panel-body">
