--- a/app/views/instapost_lessons/lessons/lesson_17.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_17.html.erb
@@ -31,7 +31,7 @@ before_action :is_owner?
 private
 
 def is_owner?
-  if @post.user_id != current_user.id
+  if Post.find(params[:id]).user_id != current_user.id
     redirect_to root_path
   end
 end
