--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -20,6 +20,7 @@
   color: #5cb85c;
   font-weight: 400 !important;
   margin-top: 15px;
+  margin-bottom: 15px;
   .fa {
     color: #5cb85c !important;
     -webkit-transition: all 0.4s ease-in-out;
@@ -233,7 +234,6 @@ span.radio.inline {
     border-left: 5px solid #ec6952;
     border-bottom: 2px solid #ec6952;
     padding-left: 10px;
-    margin-top: 50px;
   }
 }
 
